--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <iframe style="border:none" src="https://firebasestorage.googleapis.com/v0/b/quizapp-49c5d.appspot.com/o/menu1.pdf?alt=media&token=fd843fb6-23fc-4a45-b919-52601f2d6a42#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="1000px"
-    />
+    <iframe style="border:none" src="https://docs.google.com/viewer?url=https://firebasestorage.googleapis.com/v0/b/quizapp-49c5d.appspot.com/o/menu1.pdf?alt=media&token=fd843fb6-23fc-4a45-b919-52601f2d6a42#toolbar=0&navpanes=0&scrollbar=0&embedded=true"
+        type="application/pdf" width="100%" height="1000px" />
     <div id="overlay" style="margin: auto;">
         <!-- <img src="loading.gif" alt="Loading..."> -->
         <iframe src="https://giphy.com/embed/xTk9ZvMnbIiIew7IpW" width="100%" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
