--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="overlay" style="margin: auto;">
         <!-- <img src="loading.gif" alt="Loading..."> -->
         <!-- <iframe src="https://giphy.com/embed/xTk9ZvMnbIiIew7IpW" width="100%" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe> -->
-        <img src="./asset" alt="" srcset="">
+        <img src="./asset/1.jpg" alt="" srcset="">
         <img src="./asset/2.jpg" alt="" srcset="">
         <img src="./asset/3.jpg" alt="" srcset="">
         <img src="./asset/4.jpg" alt="" srcset="">
